--- a/ZTSN/templates/ZTSN/TradingPage.html
+++ b/ZTSN/templates/ZTSN/TradingPage.html
@@ -106,22 +106,14 @@
 <!-- Load javascripts from Content Delivery Network -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 <script src="https://code.highcharts.com/highcharts.js"></script>
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
-
-
-<!-- Make sure a warning apears when someone tries to refresh or leave the session-->
-<body onkeydown="return (event.keyCode != 116)"></body>
-<body onkeydown="return (event.keyCode != 8)"></body>
-<body onkeydown="return (event.keyCode != 123)"></body>
-<body onkeydown="return (event.keyCode != 154)"></body>
 
 <!-- Load custom javascripts from static files -->
 <script src="{% static "ZTSN/chart.js" %}?v=Mar 19 08:30"></script>
@@ -129,6 +121,8 @@
 {% endblock %}
 
 {% block styles %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
 <!-- Add custom CSS rules to override default toastr styles -->
 <style>
 .toast {
