--- a/ZTS/templates/ZTS/InstructionPage.html
+++ b/ZTS/templates/ZTS/InstructionPage.html
@@ -45,7 +45,7 @@
         <br>
         Sie erhalten eine leistungsabhängige Auszahlung aus einer zufällig ausgewählten Runde der beiden Testrunden. 
         Die Auszahlung entspricht dem Gesamtwert des Portfolios am Ende der Runde (nach Rückzahlung der 80 ECUs).
-        Verluste werden nicht von Ihrer fixen Vergütung abgezogen werden.
+        Verluste werden nicht von Ihrer fixen Vergütung abgezogen.
 
         <br>
         <br>
