--- a/ZTSN/templates/ZTSN/InstructionPage2.html
+++ b/ZTSN/templates/ZTSN/InstructionPage2.html
@@ -20,12 +20,12 @@
         <b><em>2. Portfolio:</em></b>
         <br>
         Hier sehen Sie alle zur gegebenen Zeit und in Ihrem Besitz befindenden Vermögenswerte: Bargeld, Aktie (Anteile an
-        dem riskanten Vermögenswert, Aktienwert (Wert der gehaltenen Anteile) und Gesamt (Summe aus Bargeld und dem Aktienwert).
+        dem riskanten Vermögenswert), Aktienwert (Wert der gehaltenen Anteile) und Gesamt (Summe aus Bargeld und dem Aktienwert).
         <br>
         <br>
         <b><em>3. Rechte Box:</em></b>
         <br>
-        Hier sehen Sie den aktuellen Marktpreis der Aktie, die Schaltflächen für den Kauf und Verkauf von Aktien sowie
+        Hier sehen Sie den aktuellen Marktpreis der Aktie, die über die gesamte Periode konstante Risikoklasse, die Schaltflächen für den Kauf und Verkauf von Aktien sowie
         Informationen bezüglich Investitionen im Allgemeinen oder bezogen auf die Aktie.
         <br>
         <br>
