--- a/ZTS/templates/ZTS/TradingPage.html
+++ b/ZTS/templates/ZTS/TradingPage.html
@@ -72,25 +72,25 @@
                 <h3>Handel</h3>
                 <div class="row">
                     <div class="col-sm d-flex justify-content-center">
-                    <button onclick="buy_shares(this.value); startAndStopConfetti()" value="1" id="trade_btn_buy_s" type="button" class="btn btn-success btn-block" style="font-size: 20px; width: 140px;">1x kaufen</button>
+                    <button onclick="buy_shares(this.value);" value="1" id="trade_btn_buy_s" type="button" class="btn btn-success btn-block" style="font-size: 20px; width: 140px;">1x kaufen</button>
                     </div>
                     <div class="col-sm d-flex justify-content-center">
-                    <button onclick="buy_shares(this.value); startAndStopConfetti()" value="5" id="trade_btn_buy_l" type="button" class="btn btn-success btn-block" style="font-size: 20px; width: 140px;">5x kaufen</button>
+                    <button onclick="buy_shares(this.value);" value="5" id="trade_btn_buy_l" type="button" class="btn btn-success btn-block" style="font-size: 20px; width: 140px;">5x kaufen</button>
                     </div>
                 </div><p>
 
                 <div class="row">
                     <div class="col-sm d-flex justify-content-center">
-                    <button onclick="sell_shares(this.value); startAndStopConfetti()" value="1" id="trade_btn_sell_s" type="button" class="btn btn-danger btn-block" style="font-size: 20px; width: 140px;">1x verkaufen</button>
+                    <button onclick="sell_shares(this.value);" value="1" id="trade_btn_sell_s" type="button" class="btn btn-danger btn-block" style="font-size: 20px; width: 140px;">1x verkaufen</button>
                     </div>
                     <div class="col-sm d-flex justify-content-center">
-                    <button onclick="sell_shares(this.value); startAndStopConfetti()" value="5" id="trade_btn_sell_l" type="button" class="btn btn-danger btn-block" style="font-size: 20px; width: 140px;">5x verkaufen</button>
+                    <button onclick="sell_shares(this.value);" value="5" id="trade_btn_sell_l" type="button" class="btn btn-danger btn-block" style="font-size: 20px; width: 140px;">5x verkaufen</button>
                     </div>
                 </div>
             </div>
 
             <div class="container-fluid mt-4">
-                <div class="jumbotron left col-sm" style=background-color:rgb(211,211,211);height:280px id="trade_news"</div>
+                <div class="jumbotron left col-sm" style=background-color:rgb(211,211,211);height:280px id="trade_news"></div>
             </div>
         </div>
     </div>
@@ -103,6 +103,7 @@
 {% block scripts %}
 <!-- Write scripts in here! -->
 
+
 <!-- Load javascripts from Content Delivery Network -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -112,7 +113,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
-
 <!-- Load custom javascripts from static files -->
 <script src="{% static "ZTS/chart.js" %}?v=Mar 19 08:30"></script>
 <script src="{% static "ZTS/trade_controller.js" %}?v=Apr 19 07:46"></script>
@@ -121,17 +121,21 @@
 
 {% block styles %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
+
+
 <link href="https://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/darkly/bootstrap.min.css">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" type="text/css">
 <!-- Add custom CSS rules to override default toastr styles -->
+
 <style>
 body {
     background-image: linear-gradient(to top, #b7e4c7, #f5f7fa);
     min-height: 100vh;
     color: black;
 }
-
 
 #confetti-canvas {
   position: fixed;
