--- a/ZTSN/templates/ZTSN/TradingPage.html
+++ b/ZTSN/templates/ZTSN/TradingPage.html
@@ -9,7 +9,7 @@
 <!-- Write content in here -->
 
 <div class="container-fluid" >
-    <div class="row" >
+    <div class="row">
 
         <!-- left side -->
         <div class="col-lg-8">
@@ -72,30 +72,29 @@
                 <h3>Handel</h3>
                 <div class="row">
                     <div class="col-sm d-flex justify-content-center">
-                    <button onclick="buy_shares(this.value)" value="1" id="trade_btn_buy_s" type="button" class="btn btn-success btn-block" style="font-size: 20px; width: 140px;">1x kaufen</button>
+                    <button onclick="buy_shares(this.value);" value="1" id="trade_btn_buy_s" type="button" class="btn btn-success btn-block" style="font-size: 20px; width: 140px;">1x kaufen</button>
                     </div>
                     <div class="col-sm d-flex justify-content-center">
-                    <button onclick="buy_shares(this.value)" value="5" id="trade_btn_buy_l" type="button" class="btn btn-success btn-block" style="font-size: 20px; width: 140px;">5x kaufen</button>
+                    <button onclick="buy_shares(this.value);" value="5" id="trade_btn_buy_l" type="button" class="btn btn-success btn-block" style="font-size: 20px; width: 140px;">5x kaufen</button>
                     </div>
                 </div><p>
 
                 <div class="row">
                     <div class="col-sm d-flex justify-content-center">
-                    <button onclick="sell_shares(this.value)" value="1" id="trade_btn_sell_s" type="button" class="btn btn-danger btn-block" style="font-size: 20px; width: 140px;">1x verkaufen</button>
+                    <button onclick="sell_shares(this.value);" value="1" id="trade_btn_sell_s" type="button" class="btn btn-danger btn-block" style="font-size: 20px; width: 140px;">1x verkaufen</button>
                     </div>
                     <div class="col-sm d-flex justify-content-center">
-                    <button onclick="sell_shares(this.value)" value="5" id="trade_btn_sell_l" type="button" class="btn btn-danger btn-block" style="font-size: 20px; width: 140px;">5x verkaufen</button>
+                    <button onclick="sell_shares(this.value);" value="5" id="trade_btn_sell_l" type="button" class="btn btn-danger btn-block" style="font-size: 20px; width: 140px;">5x verkaufen</button>
                     </div>
                 </div>
             </div>
 
             <div class="container-fluid mt-4">
-                <div class="jumbotron left col-sm" style=background-color:rgb(211,211,211);height:280px id="trade_news"</div>
+                <div class="jumbotron left col-sm" style=background-color:rgb(211,211,211);height:280px id="trade_news"></div>
             </div>
         </div>
     </div>
 </div>
-
 {% next_button %}
 
 {% endblock %}
@@ -104,9 +103,7 @@
 <!-- Write scripts in here! -->
 
 <!-- Load javascripts from Content Delivery Network -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
@@ -121,8 +118,10 @@
 {% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
+
 <!-- Add custom CSS rules to override default toastr styles -->
 <style>
 .toast {
