--- a/ZTS/templates/ZTS/InstructionPage.html
+++ b/ZTS/templates/ZTS/InstructionPage.html
@@ -29,7 +29,7 @@
         klicken. Das können Sie so oft machen wie Sie glauben, dass es für Sie gewinnbringend sein wird. Behalten Sie aber
         stets in Erinnerung, dass Sie eine <em>Gebühr in Höhe von 1,25%</em> (in Relation zum aktuellen Aktienpreis) für jeden Kauf
         und Verkauf zahlen. Sie können immer nur 1 Aktie oder 5 Aktien kaufen und 1 Aktie oder 5 Aktien verkaufen. Besitzen
-        Sie nur 3 Aktien, können Sie mit der "5x verkaufen" Schaltfläche ihre maximale Zahl an Aktien verkaufen.
+        Sie nur 3 Aktien, können Sie mit der "5x verkaufen" Schaltfläche Ihre maximale Zahl an Aktien verkaufen.
         Nehmen Sie nun beispielsweise an, dass Sie eine Aktie halten und diese für einen Marktpreis
         von 100 ECUs verkaufen, dann werden Ihnen nur 98,75 ECUs auf Ihr Bargeldkonto gutgeschrieben. Sind Sie sich außerdem
         bewusst, dass der Handel für Sie <em>für 2 Sekunden ausgesetzt wird</em>, wenn Sie eine Aktie verkaufen wollen,
