--- a/ZTSN/templates/ZTSN/Welcome.html
+++ b/ZTSN/templates/ZTSN/Welcome.html
@@ -8,7 +8,7 @@
 {% block content %}
     <p>Liebe TeilnehmerInnen,</p>
         
-    <p>dieses Experiment besteht aus einer Marktsimulation und einem Fragebogen, wobei sich die Marktsimulation auf Ihre Auszahlung auswirkt, falls dieses Experiment für die Auszahlung ausgewählt wird.</p> 
+    <p>dieses Experiment besteht aus einer Marktsimulation, wobei sich die Marktsimulation auf Ihre Auszahlung auswirkt, falls dieses Experiment für die Auszahlung ausgewählt wird.</p> 
     
 
     {{ next_button }}
